Fix margin on input on ios

--- a/src/site/sass/includes/_forms.sass
+++ b/src/site/sass/includes/_forms.sass
@@ -87,6 +87,7 @@ button, select, input, .checkbox-row .pill
 	background-color: #fff
 	padding: 8px
 	line-height: 1
+	margin: 0
 
 	&::placeholder
 		font-style: italic
